[package]
name = "GMCryptorRustWasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.76"
hex = "0.4"
getrandom = { version = "0.2.3", features = ["js"] }
gmsm = "0.1"
libsm = { path = "/Users/seahigh/Downloads/libsm-master" }