[package]
name = "gmCryptor-rust-wasm"
version = "0.1.0"
edition = "2018"
 
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
hex = "0.4.3"
getrandom = { version = "0.2.3", features = ["js"] }
gmsm = "0.1"
rand_core = "0.6.3"
byteorder = "1.4.3"
num-bigint = "0.4.2"
num-traits = "0.2.14"
num-integer = "0.1.44"
yasna = { version = "0.4.0", features = [ "num-bigint" ]}
lazy_static = "1.4.0"